--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <p class="bg-slate-600">
         This is a paragraph.
     </p>
+    <p>
+        This isan another paragraph.
+    </p>
 </body>
 </html>
